--- a/layout.css
+++ b/layout.css
@@ -10,7 +10,7 @@
     background-color: lightgray;
   }
   
-  .aside {
+  .right {
     background-color: #e5e5e5;
     float: left;
     height: 500px;
@@ -49,7 +49,7 @@
       width: 100%;
       height: 70%;
     }
-    .aside{
+    .right{
       width: 100%;
       height: 30%;
     }
@@ -64,7 +64,7 @@
           width: 100%;
           height: 70%;
         }
-        .aside{
+        .right{
           width: 100%;
           height: 30%;
         }
@@ -79,7 +79,7 @@
       width: 100%;
       height: 70%;
     }
-    .aside{
+    .right{
       width: 100%;
       height: 30%;
     }
